--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         position:relative;
         max-width:700px;
         margin:0 auto;
-        padding:0;
+        padding:10px;
         background:#fff;
         color:#555
     }
