--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <footer>
     <div align="center">
         Copyright © {{ thisYear }} <a href="http://www.czq233.com">BUPTCZQ</a>
+         | <script src="https://s22.cnzz.com/z_stat.php?id=1261965247&web_id=1261965247" language="JavaScript"></script>
         <br />
         Powered by <a href="https://www.vuejs.org">Vue.js</a>
     </div>
