--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- use prism -->
   <link rel="stylesheet" href="./static/prism.css">
   <!-- use element -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
+  <link rel="stylesheet" href="https://cdn.css.net/libs/element-ui/1.3.4/theme-default/index.css">
   <style type="text/css">
     body{
         font-family:PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif;
@@ -74,6 +74,9 @@
     .hometitle {
         color:#555;
     }
+    [v-cloak] {
+        display: none;
+    }
   </style>
 </head>
 
@@ -89,54 +92,57 @@
     </el-row>
     <em>Stay hungry. Stay foolish.</em>
     </div>
-    <br />
-    <!-- body -->
-    <div v-loading="loading">
-        <!-- list -->
-        <div v-if="showlist">
-        <div v-for="page in pages">
-        <el-card>
-            <a class="item-title" v-bind:href="'#/'+page.sha"><h3>{{ page.title }}</h3></a>
-            <p style="font-size: 10px;">{{ page.date }}</p>
-        </el-card>
-        <br />
-        </div>
-        </div>
-        <!-- pageview -->
-        <div v-else>
-            <div v-html="pagedata"></div>
+    <!-- view -->
+    <div v-cloak>
+        <!-- body -->
+        <div v-loading="loading">
             <br />
+            <!-- list -->
+            <div v-if="showlist">
+            <div v-for="page in pages">
+            <el-card>
+                <a class="item-title" v-bind:href="'#/'+page.sha"><h3>{{ page.title }}</h3></a>
+                <p style="font-size: 10px;">{{ page.date }}</p>
+            </el-card>
+            <br />
+            </div>
+            </div>
+            <!-- pageview -->
+            <div v-else>
+                <div v-html="pagedata"></div>
+                <br />
+            </div>
         </div>
-    </div>
-    <!-- links -->
-    <div align="center">
-        <h3>Links</h3>
-        <div v-for="link in links">
-        <a v-bind:href="link.url" target="_blank" style="font-size: 10px;">{{ link.name }}</a>
+        <!-- links -->
+        <div align="center">
+            <h3>Links</h3>
+            <div v-for="link in links">
+            <a v-bind:href="link.url" target="_blank" style="font-size: 10px;">{{ link.name }}</a>
+            </div>
         </div>
-    </div>
-    <br />
-    <!-- footer -->
-    <footer>
-    <div align="center">
-        Copyright © {{ thisYear }} <a href="http://www.czq233.com">BUPTCZQ</a>
-         | <script src="https://s22.cnzz.com/z_stat.php?id=1261965247&web_id=1261965247" language="JavaScript"></script>
         <br />
-        Powered by <a href="https://www.vuejs.org">Vue.js</a>
+        <!-- footer -->
+        <footer>
+        <div align="center">
+            Copyright © {{ thisYear }} <a href="http://www.czq233.com">BUPTCZQ</a>
+             | <script src="https://s22.cnzz.com/z_stat.php?id=1261965247&web_id=1261965247" language="JavaScript"></script>
+            <br />
+            Powered by <a href="https://www.vuejs.org">Vue.js</a>
+        </div>
+        </footer>
     </div>
-    </footer>
   </div>
 </body>
   <!-- Vue.js -->
-  <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
+  <script src="https://cdn.css.net/libs/vue/2.3.3/vue.min.js"></script>
   <!-- Element -->
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script src="https://cdn.css.net/libs/element-ui/1.3.4/index.js"></script>
   <!-- Marked.js -->
   <script src="./static/marked.min.js"></script>
   <!-- Prism.js -->
   <script src="./static/prism.js"></script>
   <!-- Axios -->
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.css.net/libs/axios/0.16.1/axios.min.js"></script>
   <script>
     // Cache processor
     const Cache = {
