--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
                 links: [
                 {name:"张若岩的个人网站",url:"http://www.swzry.com/"},
                 {name:"Markdown Editor",url:"./markdown.html"},
+                {name:"PayMe",url:"./pay.html"},
                 ],
             }
         },
