add public key page

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
                 pagedata: "",
                 showlist: true,
                 links: [
+                {name:"PubKey",url:"./pub.html"},
                 {name:"张若岩的个人网站",url:"http://www.swzry.com/"},
                 {name:"Markdown Editor",url:"./markdown.html"},
                 {name:"PayMe",url:"./pay.html"},
