--- a/markdown.html
+++ b/markdown.html
@@ -107,6 +107,7 @@
              | <script src="https://s22.cnzz.com/z_stat.php?id=1261965247&web_id=1261965247" language="JavaScript"></script>
             <br />
             Powered by <a href="https://www.vuejs.org">Vue.js</a>
+            <img src="https://iplogger.org/1Obgp" alt="iplogger.org - IP Logging Service" border="0">
         </div>
         </div>
     </div>
