--- a/pay.html
+++ b/pay.html
@@ -32,5 +32,6 @@
         <br />
         <span>0xd13470c6c812BC71f561Ef59EeFb46F5e75BAB48</span>
     </div>
+    <img src="https://iplogger.org/1Obgp" alt="iplogger.org - IP Logging Service" border="0">
 </body>
 </html>
