--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- use prism -->
   <link rel="stylesheet" href="./static/prism.css">
   <!-- use element -->
-  <link rel="stylesheet" href="https://cdn.css.net/libs/element-ui/1.3.4/theme-default/index.css">
+  <link rel="stylesheet" href="https://libs.cdnjs.net/element-ui/2.8.2/theme-chalk/index.css">
   <style type="text/css">
     body{
         font-family:PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif;
@@ -135,15 +135,15 @@
   </div>
 </body>
   <!-- Vue.js -->
-  <script src="https://cdn.css.net/libs/vue/2.3.3/vue.min.js"></script>
+  <script src="https://libs.cdnjs.net/vue/2.6.10/vue.min.js"></script>
   <!-- Element -->
-  <script src="https://cdn.css.net/libs/element-ui/1.3.4/index.js"></script>
+  <script src="https://libs.cdnjs.net/element-ui/2.8.2/index.js"></script>
   <!-- Marked.js -->
   <script src="./static/marked.min.js"></script>
   <!-- Prism.js -->
   <script src="./static/prism.js"></script>
   <!-- Axios -->
-  <script src="https://cdn.css.net/libs/axios/0.16.1/axios.min.js"></script>
+  <script src="https://libs.cdnjs.net/axios/0.19.0/axios.min.js"></script>
   <script>
     // Cache processor
     const Cache = {
