--- a/otp/live.html
+++ b/otp/live.html
@@ -1,93 +1,121 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Live</title>
-        <script src="./js.cookie.min.js" type="text/javascript"></script>
-        <script src="./jquery-2.1.4.min.js" type="text/javascript"></script>
-	</head>
-	<body id="body">
-        <video id="video1" autoplay="" playsinline=""></video>
-		<script>
-            function getUrlParam(name) {
-                var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
-                var r = window.location.search.substr(1).match(reg);
-                if (r != null) return unescape(r[2]); return null;
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Live</title>
+    <style>
+        body {
+            padding: 0px;
+            margin: 0px;
+        }
+        .content {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%; 
+            overflow: hidden;
+        }
+        video {
+            background-color: #000;
+            bottom: 0;
+            height: 100%;
+            left: 0;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 100%;
+        }
+    </style>
+    <script src="./jquery-2.1.4.min.js" type="text/javascript"></script>
+</head>
+
+<body id="body">
+    <div class="content">
+        <video id="video1" playsinline controls preload="auto"></video>
+    </div>
+    <script>
+        function getUrlParam(name) {
+            var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+            var r = window.location.search.substr(1).match(reg);
+            if (r != null) return unescape(r[2]); return null;
+        }
+        $(document).ready(function () {
+            var token = getUrlParam("token")
+            let conn = new WebSocket('wss://api.czq233.com/rtc?token='+token)
+            let pc = new RTCPeerConnection({
+                "ice_servers": [{ "urls": "stun:stun.miwifi.com" },]
+            })
+            pc.ontrack = function (event) {
+                if (event.track.kind === 'audio') {
+                    return
+                }
+                var el = document.getElementById('video1');
+                el.srcObject = event.streams[0];
             }
-            $(document).ready(function() {
-				var token = getUrlParam("token")
-				let conn = new WebSocket('wss://api.czq233.com/rtc?token='+token)
-				let pc = new RTCPeerConnection({
-					"ice_servers":[{ "urls" : "stun:stun.miwifi.com"},]
-				})
-				pc.ontrack = function (event) {
-				if (event.track.kind === 'audio') {
-					return
-				}
-				var el = document.getElementById('video1')
-				el.srcObject = event.streams[0]
-				el.autoplay = true
-				el.playsinline = true
-				el.controls = true
-				}
 
-				pc.onconnectionstatechange = function(event){
-					console.log("state change", pc.connectionState);
-				}
+            pc.onconnectionstatechange = function (event) {
+                console.log("state change", pc.connectionState);
+            }
 
-				pc.onicecandidate = (ice_event) => {
-					if (ice_event.candidate){
-						console.log("send ice candidate", ice_event.candidate)
-						conn.send(JSON.stringify({type: 'ice', data: ice_event.candidate}))
-					}else{
-						console.log("ice gathering completed.")
-					}
-				}
+            pc.onicecandidate = (ice_event) => {
+                if (ice_event.candidate) {
+                    console.log("send ice candidate", ice_event.candidate)
+                    conn.send(JSON.stringify({ type: 'ice', data: ice_event.candidate }))
+                } else {
+                    console.log("ice gathering completed.")
+                }
+            }
 
-				conn.onopen = () => {
-					let options = {
-						OfferToReceiveAudio: true,
-						OfferToReceiveVideo: true,
-					}
-					pc.addTransceiver('video', {'direction': 'recvonly'})
-					pc.addTransceiver('audio', {'direction': 'recvonly'})
-					pc.createOffer(options).then(offer => {
-						pc.setLocalDescription(offer).then(()=>{
-							console.log('send offer', pc.localDescription.sdp)
-							conn.send(JSON.stringify({type: 'offer', data: pc.localDescription}))
-						})
-					})
-				}
-				conn.onclose = evt => {
-					console.log('Connection closed')
-				}
-				conn.onmessage = evt => {
-					let msg = JSON.parse(evt.data)
-					if (!msg) {
-						return console.log('failed to parse msg')
-					}
-					switch (msg.type) {
-					case 'answer':
-						answer = msg.data
-						console.log('receive answer', answer.sdp)
-						if (!answer) {
-							return console.log('failed to parse answer')
-						}
-						pc.setRemoteDescription(answer)
-						break
-					case 'ice':
-						iceData = msg.data
-						if (!iceData) {
-							return console.log('failed to parse ice data')
-						}
-						console.log("trickle ice candidate: ", iceData)
-						pc.addIceCandidate(
-							new RTCIceCandidate(iceData)
-						)
-						break
-					}
-				}
-				window.conn = conn
-			});
-		</script>
-	
+            conn.onopen = () => {
+                let options = {
+                    OfferToReceiveAudio: true,
+                    OfferToReceiveVideo: true,
+                }
+                pc.addTransceiver('video', { 'direction': 'recvonly' })
+                pc.addTransceiver('audio', { 'direction': 'recvonly' })
+                pc.createOffer(options).then(offer => {
+                    pc.setLocalDescription(offer).then(() => {
+                        console.log('send offer', pc.localDescription.sdp)
+                        conn.send(JSON.stringify({ type: 'offer', data: pc.localDescription }))
+                    })
+                })
+            }
 
-</body></html>
+            conn.onclose = evt => {
+                console.log('Connection closed')
+            }
+
+            conn.onmessage = evt => {
+                let msg = JSON.parse(evt.data)
+                if (!msg) {
+                    return console.log('failed to parse msg')
+                }
+                switch (msg.type) {
+                    case 'answer':
+                        answer = msg.data
+                        console.log('receive answer', answer.sdp)
+                        if (!answer) {
+                            return console.log('failed to parse answer')
+                        }
+                        pc.setRemoteDescription(answer)
+                        break
+                    case 'ice':
+                        iceData = msg.data
+                        if (!iceData) {
+                            return console.log('failed to parse ice data')
+                        }
+                        console.log("trickle ice candidate: ", iceData)
+                        pc.addIceCandidate(
+                            new RTCIceCandidate(iceData)
+                        )
+                        break
+                }
+            }
+            window.conn = conn
+        });
+    </script>
+</body>
+
+</html>
