[feature] print current time

--- a/otp/play.html
+++ b/otp/play.html
@@ -224,6 +224,8 @@
                     }
                     window.conn = conn
                     
+                } else {
+                    console.log(`current: ${player.currentTime()}, total: ${player.duration()}`);
                 }
             });
         
